@@ -8,7 +8,7 @@ is($dist,1);
 my $dist=$dist->first;
 
 is($dist->dist,'Class-DBI');
-use Data::Dumper;
+
 my $req=$dist->requiring;
 while (my $r=$req->next) {
 diag($r->dist->dist);
