@@ -2,7 +2,8 @@
 # Changes for Module::CPANTS::ProcessCPAN
 #-----------------------------------------------------------------
 
-
+    - applied patch submitted by Brian Cassidy to remove unneeded
+      Data::Dumper statements
     - first prototype of prereq_matches_use
     - re-enabled distgraphs
     - fixed a bug which caused old YAML files to be read. Reported by
